<resources>
    <string name="KeyType_Custom">Custom</string>
    <string name="KeyType_Numbers">Numbers</string>
    <string name="KeyType_air_aid_hot">Aid hot</string>
    <string name="KeyType_air_anion">Anion</string>
    <string name="KeyType_air_cool">Cool</string>
    <string name="KeyType_air_hot">Hot</string>
    <string name="KeyType_air_light">Light</string>
    <string name="KeyType_air_power_saving">Power saving</string>
    <string name="KeyType_air_quick_cool">Quick cool</string>
    <string name="KeyType_air_quick_hot">Quick hot</string>
    <string name="KeyType_air_sleep">Sleep</string>
    <string name="KeyType_air_super">Super power</string>
    <string name="KeyType_air_time">Timer</string>
    <string name="KeyType_air_wet">Wet</string>
    <string name="KeyType_auto">Auto</string>
    <string name="KeyType_back">Back</string>
    <string name="KeyType_bottom">Bottom</string>
    <string name="KeyType_brightness">Brightness</string>
    <string name="KeyType_channel_down">P -</string>
    <string name="KeyType_channel_up">P +</string>
    <string name="KeyType_d_zoom_down">Zoom out</string>
    <string name="KeyType_d_zoom_up">Zoom in</string>
    <string name="KeyType_digital">Digital number</string>
    <string name="KeyType_dual_screen">Dual screen</string>
    <string name="KeyType_eight">Numeric keys 8</string>
    <string name="KeyType_five">Numeric keys 5</string>
    <string name="KeyType_forward">Fast Forward</string>
    <string name="KeyType_four">Numeric keys 4</string>
    <string name="KeyType_freeze">Screen freezes</string>
    <string name="KeyType_head_swing">Swing</string>
    <string name="KeyType_home">Home</string>
    <string name="KeyType_information">Info</string>
    <string name="KeyType_language">Language (English only)</string>
    <string name="KeyType_look_back">Back</string>
    <string name="KeyType_memorykey_one">Memory key 1</string>
    <string name="KeyType_memorykey_two">Memory key 2</string>
    <string name="KeyType_menu">Menu</string>
    <string name="KeyType_menu_down">Downward</string>
    <string name="KeyType_menu_exit">Exit</string>
    <string name="KeyType_menu_left">leftward</string>
    <string name="KeyType_menu_ok">OK</string>
    <string name="KeyType_menu_right">Rightward</string>
    <string name="KeyType_menu_up">Upward</string>
    <string name="KeyType_mode">Mode</string>
    <string name="KeyType_mute">Mute</string>
    <string name="KeyType_next">Next page</string>
    <string name="KeyType_nine">Numeric keys 9</string>
    <string name="KeyType_one">Numeric keys 1</string>
    <string name="KeyType_open">Open</string>
    <string name="KeyType_pause">Pause</string>
    <string name="KeyType_play">Play</string>
    <string name="KeyType_power">Power</string>
    <string name="KeyType_power_off">Power off</string>
    <string name="KeyType_power_on">Power on</string>
    <string name="KeyType_previous">Previous</string>
    <string name="KeyType_rewind">Rewind</string>
    <string name="KeyType_screen">Screen display</string>
    <string name="KeyType_setting">Setting</string>
    <string name="KeyType_seven">Numeric keys 7</string>
    <string name="KeyType_signal">Signal</string>
    <string name="KeyType_six">Numeric keys 6</string>
    <string name="KeyType_sound_channel">Voice channel</string>
    <string name="KeyType_standard">Format</string>
    <string name="KeyType_stop">Stop</string>
    <string name="KeyType_subtitles">Subtitle</string>
    <string name="KeyType_temp_down">Temp reduce</string>
    <string name="KeyType_temp_up">Temp plus</string>
    <string name="KeyType_ten_plus">Plus 10</string>
    <string name="KeyType_three">Numeric keys 3</string>
    <string name="KeyType_title">Title</string>
    <string name="KeyType_top">Top</string>
    <string name="KeyType_two">Numeric keys 2</string>
    <string name="KeyType_vol_down">V -</string>
    <string name="KeyType_vol_up">V +</string>
    <string name="KeyType_wind_amount">Wind amount</string>
    <string name="KeyType_wind_class">Wind class</string>
    <string name="KeyType_wind_direct">WindDirect</string>
    <string name="KeyType_wind_horizontal">Horizontal wind</string>
    <string name="KeyType_wind_swing">Auto Swing</string>
    <string name="KeyType_wind_swing_manual">Manual Swing</string>
    <string name="KeyType_wind_velocity">Wind velocity</string>
    <string name="KeyType_wind_vertical">Vertical wind</string>
    <string name="KeyType_zero">Numeric keys 0</string>
    <string name="MachineType_13">Electric heater</string>
    <string name="MachineType_14">Robot Vacuum</string>
    <string name="MachineType_15">Blind</string>
    <string name="MachineType_air_cleaner">Air purifier</string>
    <string name="MachineType_air_conditioner">AC</string>
    <string name="MachineType_amplifier">Amplifier</string>
    <string name="MachineType_camera">Camera</string>
    <string name="MachineType_diy">Ir copying</string>
    <string name="MachineType_dvd">DVD</string>
    <string name="MachineType_fan">Fan</string>
    <string name="MachineType_ir_switch">Light bulb</string>
    <string name="MachineType_other">customize</string>
    <string name="MachineType_ottbox">OTT-box</string>
    <string name="MachineType_projector">Projector</string>
    <string name="MachineType_stb">STB /Satellite</string>
    <string name="MachineType_tv">TV</string>
    <string name="MachineType_water_heater">Water heater</string>
    <string name="Remote_diy">Recorded</string>
    <string name="Remote_save">Save Remote</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_me_deverlop">Technology development:</string>
    <string name="about_me_product">The product manager:</string>
    <string name="about_version">Version: v%s</string>
    <string name="add">Add</string>
    <string name="add_device">Add BLE device</string>
    <string name="add_floating_window">Floating window</string>
    <string name="add_ir_key">Click the add button</string>
    <string name="add_ir_key_tips_l">coding learning</string>
    <string name="add_ir_key_tips_r">Emit infrared</string>
    <string name="add_remote">Add Control</string>
    <string name="added">Added</string>
    <string name="aim_target">Warm reminder</string>
    <string name="air_supply">Wind</string>
    <string name="alert_dialog_title">Prompt</string>
    <string name="alert_tips_title">prompt</string>
    <string name="app_name">Aura IR</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="audio_tip">Tips for using</string>
    <string name="audio_tip_content">The remote control interface can display the voice switch icon when this function is turned on. When the voice is turned on, you can say [turn on the air conditioner] [turn off the air conditioner] [cooling mode] and other commands. For more commands, please check the manual.</string>
    <string name="auto_fail_1">1. The remote control head is not aligned with the air conditioner. Adjust the Angle of the remote control head</string>
    <string name="auto_fail_2">2. The phone is too far away from the air conditioner to receive feedback effectively. Please get as close as possible</string>
    <string name="auto_fail_3">3. The surrounding environment is too noisy, please keep the environment quiet</string>
    <string name="auto_fail_4">4. There is no suitable code library in the App, please contact customer service for feedback</string>
    <string name="auto_match">Automatic matching</string>
    <string name="auto_match_again_tips1">Your environment may be noisy, again for you to match</string>
    <string name="auto_match_confirm_btn">Confirmed</string>
    <string name="auto_match_confirm_tips1">1. The surroundings are quiet</string>
    <string name="auto_match_confirm_tips2">2. Aim the firing head at the air conditioner</string>
    <string name="auto_match_confirm_tips3">3. Stay within 3 meters of the air conditioner</string>
    <string name="auto_match_confirm_title">Please confirm the following precautions again</string>
    <string name="auto_match_fail">Matching fails, possible cause</string>
    <string name="auto_match_rule">"1.The remote control of the air conditioner itself has Didi sound can be used to automatically match 
2.Please stay within 3 meters of the air conditioner and keep the surrounding area as quiet as possible
3.Please point the launching head of the remote control towards the air conditioner as far as possible"</string>
    <string name="auto_match_sensitivity">Recognition sensitivity</string>
    <string name="auto_match_setting">Automatic matching setting</string>
    <string name="auto_match_tips1">"Matching the %1$d remote control,
 
 the number of keys recognized is %2$d"</string>
    <string name="bbs">Forum</string>
    <string name="choose_remote_type">Choose appliance type and brand</string>
    <string name="connect_device">Connect</string>
    <string name="delete">Delete</string>
    <string name="everyday">Everyday</string>
    <string name="execute_once">Execute once</string>
    <string name="freq">Frequency</string>
    <string name="multifunction_ac">Multifunctional air conditioner companion</string>
    <string name="ota_upgrade">Updates disabled</string>
    <string name="please_select_time">Please choose a time</string>
    <string name="search_remote">Search remote</string>
    <string name="search_remote_type_hint">Enter the model of the appliance (eg: kk-p298)</string>
    <string name="search_result">Search results</string>
    <string name="sure">Confirm</string>
    <string name="timed_on">Timed on</string>
    <string name="timer_settings">Timer setting</string>
    <string name="timing_off">Timing off</string>
    <string name="updates_disabled_message">Firmware and application updates have been permanently disabled for Aura IR.</string>
    <string name="updates_disabled_details">You are already on the supported build, and no further downloads or installations will be offered.</string>
</resources>