<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_right2" android:background="#80000000" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="18.0dip" android:textStyle="bold" android:textColor="@color/white" android:id="@id/tipTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/auto_match_confirm_title" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintBottom_toTopOf="@id/tv_tips1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffe91e63" android:id="@id/tv_tips1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/auto_match_confirm_tips1" android:textAlignment="textStart" android:layout_marginStart="50.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintBottom_toTopOf="@id/tv_tips2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffe91e63" android:id="@id/tv_tips2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/auto_match_confirm_tips2" android:textAlignment="textStart" android:layout_marginStart="50.0dip" android:layout_marginEnd="15.0dip" app:layout_constraintBottom_toTopOf="@id/tv_tips3" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffe91e63" android:id="@id/tv_tips3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/auto_match_confirm_tips3" android:textAlignment="textStart" android:layout_marginStart="50.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/ivBack" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <Button android:textSize="20.0sp" android:textColor="@drawable/btn_response_text_color_selector" android:id="@id/ivBack" android:background="@drawable/btn_response_background_selector" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/auto_match_confirm_btn" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:backgroundTint="#ff1dcdbc" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
