<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_back" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:src="@mipmap/icon_chevron_left" android:contentDescription="@null" android:layout_marginStart="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timer_settings" app:layout_constraintBottom_toBottomOf="@id/iv_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/iv_back" />
    <View android:id="@id/v_title_line" android:background="#ffcccccc" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_back" />
    <TextView android:textSize="16.0sp" android:textColor="@color/dark_gray" android:id="@id/tv_timer_on" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timed_on" android:layout_marginStart="15.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/v_title_line" app:layout_constraintVertical_bias="0.1" />
    <com.mxy.fpshadowlayout.FpShadowLayout android:id="@id/fp_select_timer_on" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:fp_round_corner="fp_corner_all" app:fp_shadowColor="#b3bdcedf" app:fp_shadowRadius="8.0dip" app:fp_shadowRoundRadius="4.0dip" app:fp_shadowShape="fp_round_rectangle" app:fp_shadowSide="fp_all" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_timer_on">
        <TextView android:textSize="16.0sp" android:textColor="#ffb7c2ce" android:id="@id/tv_select_time_on" android:background="?android:selectableItemBackground" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/please_select_time" android:paddingStart="15.0dip" android:paddingEnd="5.0dip" app:drawableEndCompat="@mipmap/icon_arrow_next" />
    </com.mxy.fpshadowlayout.FpShadowLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/dark_gray" android:id="@id/tv_timer_off" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timing_off" android:layout_marginStart="15.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/v_title_line" app:layout_constraintVertical_bias="0.3" />
    <com.mxy.fpshadowlayout.FpShadowLayout android:id="@id/fp_select_timer_off" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:fp_round_corner="fp_corner_all" app:fp_shadowColor="#b3bdcedf" app:fp_shadowRadius="8.0dip" app:fp_shadowRoundRadius="4.0dip" app:fp_shadowShape="fp_round_rectangle" app:fp_shadowSide="fp_all" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_timer_off">
        <TextView android:textSize="16.0sp" android:textColor="#ffb7c2ce" android:id="@id/tv_select_time_off" android:background="?android:selectableItemBackground" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/please_select_time" android:paddingStart="15.0dip" android:paddingEnd="5.0dip" app:drawableEndCompat="@mipmap/icon_arrow_next" />
    </com.mxy.fpshadowlayout.FpShadowLayout>
    <TextView android:textSize="16.0sp" android:textColor="@color/dark_gray" android:id="@id/tv_freq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/freq" android:layout_marginStart="15.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/v_title_line" app:layout_constraintVertical_bias="0.5" />
    <RadioGroup android:orientation="horizontal" android:id="@id/rg_cycle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_freq">
        <RadioButton android:id="@id/rb_everyday" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/everyday" android:layout_weight="1.0" />
        <RadioButton android:id="@id/rb_execute_once" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/execute_once" android:layout_weight="1.0" />
    </RadioGroup>
    <com.mxy.fpshadowlayout.FpShadowLayout android:id="@id/fp_confirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" app:fp_round_corner="fp_corner_all" app:fp_shadowColor="#b3bdcedf" app:fp_shadowRadius="8.0dip" app:fp_shadowRoundRadius="4.0dip" app:fp_shadowShape="fp_round_rectangle" app:fp_shadowSide="fp_all" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/v_title_line" app:layout_constraintVertical_bias="0.8">
        <TextView android:textSize="18.0sp" android:textColor="@color/btn_gray" android:gravity="center" android:id="@id/tv_confirm" android:background="?android:selectableItemBackground" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sure" />
    </com.mxy.fpshadowlayout.FpShadowLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
