<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/iv_back" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:src="@mipmap/icon_chevron_left" android:contentDescription="@null" android:layout_marginStart="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_remote" app:layout_constraintBottom_toBottomOf="@id/iv_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/iv_back" />
    <EditText android:textSize="16.0sp" android:textColorHint="#ffb7c2ce" android:id="@id/et_brand_type" android:background="@drawable/search_remote_edit_bg" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:hint="@string/choose_remote_type" android:paddingStart="18.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" android:importantForAutofill="no" app:drawableEndCompat="@mipmap/icon_arrow_next" app:layout_constraintTop_toBottomOf="@id/iv_back" />
    <EditText android:textSize="16.0sp" android:textColorHint="#ffb7c2ce" android:id="@id/et_appliance_type" android:background="@drawable/search_remote_edit_bg" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:hint="@string/search_remote_type_hint" android:inputType="textVisiblePassword" android:paddingStart="18.0dip" android:paddingEnd="10.0dip" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" android:importantForAutofill="no" app:layout_constraintTop_toBottomOf="@id/et_brand_type" />
    <TextView android:textSize="17.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_start_search" android:background="@drawable/btn_response_background_selector" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/sure" android:layout_marginStart="18.0dip" android:layout_marginEnd="18.0dip" app:layout_constraintTop_toBottomOf="@id/et_appliance_type" />
    <TextView android:textSize="15.0sp" android:textColor="#ff333333" android:id="@id/tv_search_result" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/search_result" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_start_search" />
    <com.scwang.smart.refresh.layout.SmartRefreshLayout android:id="@id/srl_refresh" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginTop="10.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_search_result">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_result_list" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.scwang.smart.refresh.footer.ClassicsFooter android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </com.scwang.smart.refresh.layout.SmartRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
