<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout android:orientation="horizontal" android:id="@id/parent" android:background="@drawable/smart_btn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_left_parent" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/iv_head" android:layout_width="100.0dip" android:layout_height="140.0dip" android:scaleType="fitCenter" android:contentDescription="@null" android:layout_marginStart="20.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="18.0sp" android:textColor="@color/black_title" android:ellipsize="end" android:id="@id/tv_name" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/multifunction_ac" android:maxLines="1" android:layout_marginStart="10.0dip" android:layout_marginEnd="20.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iv_head" app:layout_constraintTop_toTopOf="@id/iv_head" />
        <TextView android:textSize="13.0sp" android:textColor="#ff909399" android:id="@id/tv_address" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/tv_status" app:layout_constraintEnd_toEndOf="@id/tv_name" app:layout_constraintStart_toStartOf="@id/tv_name" app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <TextView android:textColor="@drawable/device_status_text_color_selector" android:id="@id/tv_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" app:layout_constraintBottom_toTopOf="@id/tv_connect" app:layout_constraintStart_toStartOf="@id/tv_name" />
        <TextView android:textSize="16.0sp" android:textColor="@drawable/btn_connect_text_color_selector" android:id="@id/tv_connect" android:background="@drawable/btn_connect_bg_selector" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/connect_device" app:layout_constraintBottom_toBottomOf="@id/iv_head" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iv_head" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/tv_delete" android:background="#fff33213" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/delete" />
</com.mcxtzhang.swipemenulib.SwipeMenuLayout>
